[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/battery2.png" type="Texture" id=1]
[ext_resource path="res://textures/battery4.png" type="Texture" id=2]
[ext_resource path="res://textures/battery1.png" type="Texture" id=3]
[ext_resource path="res://textures/battery3.png" type="Texture" id=4]
[ext_resource path="res://scripts/Battery.gd" type="Script" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[node name="Battery" type="Node2D"]
script = ExtResource( 5 )

[node name="BatteryOutline" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="Battery1" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Battery2" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 4 )

[node name="Battery3" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )
